--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,37 @@
 version: '3.8'
 
 services:
+  db:
+    image: postgres:16-alpine
+    container_name: prospector-db
+    environment:
+      POSTGRES_USER: prospector
+      POSTGRES_PASSWORD: prospector_dev_password
+      POSTGRES_DB: prospector
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./backend/init.sql:/docker-entrypoint-initdb.d/init.sql
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U prospector"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   backend:
     build: ./backend
     ports:
       - "8000:8000"
     environment:
       - PYTHONUNBUFFERED=1
+      - DATABASE_URL=postgresql://prospector:prospector_dev_password@db:5432/prospector
     volumes:
       - ./backend:/app
     command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    depends_on:
+      db:
+        condition: service_healthy
 
   frontend:
     build: ./frontend
@@ -22,3 +44,6 @@ services:
       - /app/node_modules
     depends_on:
       - backend
+
+volumes:
+  postgres_data:
